--- a/1_Clean.ipynb
+++ b/1_Clean.ipynb
@@ -58,7 +58,7 @@
         "import pandas as pd\n",
         "import numpy as np\n",
         "\n",
-        "data = pd.read_csv('/content/User+acceptability_May+23,+2022_02.30.csv')"
+        "data = pd.read_csv('data.csv')"
       ]
     },
     {
